Fixed footer on mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,10 @@
 		padding-right: 0;
 		margin-right: 14px;
 	}
-	footer li:nth-child(2n+1){
+	footer li a{
+		color: white;
+	}
+	footer li a:hover{
 		text-decoration: underline;
 	}
 	footer  > p {
@@ -297,10 +300,10 @@
 		padding-right: 0;
 		margin-right: 14px;
 	}
-	footer li:nth-child(2){
-		text-decoration: underline;
+	footer li a{
+		color: white;
 	}
-	footer li:nth-child(3){
+	footer li a:hover{
 		text-decoration: underline;
 	}
 	footer  li:nth-child(4) {
@@ -334,7 +337,6 @@
 		margin: 0;
 	}
 	header ul li{
-
 		background-color: #ededed;
 	}
 	header > img {
@@ -351,14 +353,13 @@
 		margin: 0 auto 0 auto;
 		list-style: none;
 		padding: 0;
-		margin: 0;
+		
 	}
 	header a  {
 		box-sizing: border-box;
 		padding: 0;
 		margin: 0;
 		display: block;
-		box-sizing: border-box;
 		color: black;
 		text-decoration: none;
 		letter-spacing: -1px;
@@ -453,7 +454,7 @@
 		font-size: .9em;
 		width: 100%;
 		margin: 0px auto 0 auto;
-		padding: 0;
+		
 		letter-spacing: -1px;
 		padding: 16px 0 25px 0;
 	}
@@ -465,25 +466,28 @@
 	footer > ul{
 		padding-top: 6px;
 		padding-bottom: 17px;
-		padding-left: 15px;
+		padding-left: 0px;
+			
 	}
 	footer li {
 		padding-right: 0;
 		margin-right: 14px;
-	}
-	footer ul li:nth-child(1){
-		text-decoration: underline;
-	}
-	footer ul li:nth-child(2){
-		text-decoration: underline;
-	}
-	footer li:nth-child(3){
-		text-decoration: underline;
+		padding: 0;
+		margin: 0;
 	}
 	footer p {
 		font-weight: bold;
 		font-size: 1.1em;
 		padding-top: 10px;
+	}
+	footer ul li a{
+		color: white;
+		text-decoration: none;
+		box-sizing: border-box;
+		display: block;
+		width: 100%;
+		padding: 0;
+		margin: 0;
 	}
 	footer  li:nth-child(4) {
 		display: none;
